# pressio-demoapps-schwarz

./: .gitignore  CMakeLists.txt  README.md
meshing_scripts/: create_decomp_meshes.py  create_decomp_sample_meshes.py
perf/: CMakeLists.txt  main.cc
python/: README.md  pyproject.toml
python/pdas/: data_utils.py  error_utils.py  prom_utils.py  vis_utils.py
tests_cpp/: CMakeLists.txt  help_cmdline.hpp  observer.hpp
tests_cpp/eigen_2d_euler_riemann_implicit/: compare.py  main.cc  plot.py
tests_cpp/eigen_2d_euler_riemann_implicit/firstorder/: p_gold.txt  rho_gold.txt
tests_cpp/eigen_2d_euler_riemann_implicit/weno3/: CMakeLists.txt  p_gold.txt  rho_gold.txt
tests_cpp/eigen_2d_euler_riemann_implicit_schwarz/: CMakeLists.txt  compare.py  main.cc  main_frizzi.cc  plot.py  test.cmake
tests_cpp/eigen_2d_euler_riemann_implicit_schwarz/firstorder/: CMakeLists.txt  p_gold_0.txt  p_gold_1.txt  p_gold_2.txt  p_gold_3.txt  rho_gold_0.txt  rho_gold_1.txt  rho_gold_2.txt  rho_gold_3.txt
tests_cpp/eigen_2d_euler_riemann_implicit_schwarz/weno3/: CMakeLists.txt  p_gold_0.txt  p_gold_1.txt  p_gold_2.txt  p_gold_3.txt  rho_gold_0.txt  rho_gold_1.txt  rho_gold_2.txt  rho_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit/: compare.py  main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit/firstorder/: CMakeLists.txt  h_gold.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit/weno3/: CMakeLists.txt  h_gold.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms/: CMakeLists.txt  gen_sample_mesh.py  gen_trial_space.py
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms/lspg/: main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms/lspg/firstorder/: CMakeLists.txt  reducedState_gold.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms/lspg/weno3/: CMakeLists.txt  reducedState_gold.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms_schwarz/: CMakeLists.txt  gen_sample_mesh.py  gen_trial_space.py
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms_schwarz/lspg/: compare.py  main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms_schwarz/lspg/firstorder/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_hproms_schwarz/lspg/weno3/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_mixed_schwarz/: CMakeLists.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_mixed_schwarz/lspg/: main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit_mixed_schwarz/lspg/firstorder/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_mixed_schwarz/lspg/weno3/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms/: CMakeLists.txt  gen_trial_space.py
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms/galerkin/: main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms/galerkin/firstorder/: CMakeLists.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms/lspg/: compare.py  main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms/lspg/firstorder/: CMakeLists.txt  reducedState_gold.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms/lspg/weno3/: CMakeLists.txt  reducedState_gold.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms_schwarz/: CMakeLists.txt  gen_trial_space.py
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms_schwarz/lspg/: compare.py  main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms_schwarz/lspg/firstorder/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_roms_schwarz/lspg/weno3/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_schwarz/: CMakeLists.txt  compare.py  main.cc  plot.py  test.cmake
tests_cpp/eigen_2d_swe_slip_wall_implicit_schwarz/firstorder/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/eigen_2d_swe_slip_wall_implicit_schwarz/weno3/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_2.txt  h_gold_3.txt
tests_cpp/parallel/: CMakeLists.txt  help.hpp
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_hproms_schwarz_parallel/: CMakeLists.txt  gen_sample_mesh.py  gen_trial_space.py
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_hproms_schwarz_parallel/lspg/: CMakeLists.txt  compare.py  main.cc  plot.py  test.cmake
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_hproms_schwarz_parallel/lspg/firstorder/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_10.txt  h_gold_11.txt  h_gold_2.txt  h_gold_3.txt  h_gold_4.txt  h_gold_5.txt  h_gold_6.txt  h_gold_7.txt  h_gold_8.txt  h_gold_9.txt
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_hproms_schwarz_parallel/lspg/weno3/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_10.txt  h_gold_11.txt  h_gold_2.txt  h_gold_3.txt  h_gold_4.txt  h_gold_5.txt  h_gold_6.txt  h_gold_7.txt  h_gold_8.txt  h_gold_9.txt
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_large/: compare.py  main.cc  test.cmake
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_large/firstorder/: CMakeLists.txt  h_gold.txt
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_large/weno3/: CMakeLists.txt  h_gold.txt
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_schwarz_parallel/: CMakeLists.txt  compare.py  main.cc  plot.py  test.cmake
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_schwarz_parallel/firstorder/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_10.txt  h_gold_11.txt  h_gold_2.txt  h_gold_3.txt  h_gold_4.txt  h_gold_5.txt  h_gold_6.txt  h_gold_7.txt  h_gold_8.txt  h_gold_9.txt
tests_cpp/parallel/eigen_2d_swe_slip_wall_implicit_schwarz_parallel/weno3/: CMakeLists.txt  h_gold_0.txt  h_gold_1.txt  h_gold_10.txt  h_gold_11.txt  h_gold_2.txt  h_gold_3.txt  h_gold_4.txt  h_gold_5.txt  h_gold_6.txt  h_gold_7.txt  h_gold_8.txt  h_gold_9.txt
(+7 files in other folders)
